Fix:Fix whitespace issue on differnet screen sizes on sign up page

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -331,15 +331,23 @@ textarea {
 /* Sign up */
 /* Background */
 #sign-up-sec {
+    /* position: relative; */
+    /* Fix # 33 by mentor: There was alot of space below sign up section observed by mentor on various screen sizes, on run time mentor described the issue and told how to fix it. position relative and abosulte is not required. and background properties are moved to section element */
+    background: url("../images/Sign-up-background.webp") center center no-repeat;
+    background-size: cover;
     position: relative;
+    min-height: calc(100vh - 150px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-#sign-up-background {
+/* #sign-up-background {
     background: url("../images/Sign-up-background.webp") center center no-repeat;
     background-size: cover;
     height: 800px;
-}
+} */
 #sign-up-form {
-    position: absolute;
+    /* position: absolute; */
     /* top: 15%; */
     /* Fix as per discussion with mentor (change # 16, fix # 29): Change the Sign up for interface as it dosen't look good as per user point of view*/
     /* background-color: rgba(26, 14, 14, 0.6) ; */
@@ -356,11 +364,12 @@ textarea {
     /* Fix as per discussion with mentor (change # 16, fix # 29): Change the Sign up for interface as it dosen't look good as per user point of view, give shadow box effect as told by mentor*/
     /* https://getcssscan.com/css-box-shadow-examples */
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    
     /* Fix as per discussion with mentor (change # 17, fix # 30): The label was not actually giving equal sapce from both left and right, below is the code for fixing it*/
     /* Code By Mentor: Below is the code of how to fix a label givng it equal space from left and right no matter the screen size */
-    top: 50%;
+    /* top: 50%;
     transform: translate(-50%, -50%);
-    left: 49%;
+    left: 49%; */
 }
 #sign-up-form > h2 {
     font-family: "Dancing Script", sans-serif;
